@@ -3,6 +3,8 @@
   raised an error (thanks Todd)
 - fix another dzsave corner-case (thanks Martin)
 - neater output for "header"
+- added VIPS_META_LOADER: record the loader name
+= header displays this hint
 
 31/8/12 started 7.31.0
 - redone im_Lab2XYZ(), im_XYZ2Lab(), im_Lab2LCh(), im_LCh2Lab(), im_UCS2LCh, 
